--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   image_picker: ^1.0.7
   file_picker: ^8.0.0+1
   path: ^1.9.0
+  path_provider: ^2.1.1
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
